--- a/package.json
+++ b/package.json
@@ -24,18 +24,20 @@
   },
   "homepage": "https://github.com/ecolearnia/ecolearnia-account",
   "dependencies": {
-    "async": "^1.2.1",
-    "bluebird": "^2.9.30",
-    "bunyan": "^1.4.0",
-    "ecofyjs-config": "git://github.com/ecolearnia/ecofyjs-config.git",
-    "ecofyjs-exception": "git://github.com/ecolearnia/ecofyjs-exception.git",
-    "ecofyjs-logger-facade": "git://github.com/ecolearnia/ecofyjs-logger-facade.git",
+    "async": "^1.4.2",
+    "bluebird": "^2.10.0",
+    "bunyan": "^1.5.1",
+    "ecofyjs-config": "git://github.com/altenia/ecofyjs-config.git",
+    "ecofyjs-exception": "git://github.com/altenia/ecofyjs-exception.git",
+    "ecofyjs-logger-facade": "git://github.com/altenia/ecofyjs-logger-facade.git",
     "handlebars": "^3.0.3",
-    "hapi": "^8.6.1",
-    "hoek": "^2.14.0",
-    "lodash": "^3.9.3",
-    "mongoose": "^4.0.5",
-    "nconf": "^0.7.1"
+    "hapi": "^10.0.0",
+    "hoek": "^2.16.2",
+    "inert": "^3.0.1",
+    "lodash": "^3.10.1",
+    "mongoose": "^4.1.7",
+    "nconf": "^0.7.2",
+    "vision": "^3.0.0"
   },
   "devDependencies": {
     "chai": "^3.0.0",
