Move bell registration to lib/index.js Add model/auth.js and model/account.js Add HapiResource for account

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "lodash": "^3.10.1",
     "mongoose": "^4.1.7",
     "nconf": "^0.7.2",
+    "node-uuid": "^1.4.3",
     "vision": "^3.0.0"
   },
   "devDependencies": {
