Add unit tests for accountmanager, authmanager, googleauthhelper

--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "ecofyjs-logger-facade": "git://github.com/altenia/ecofyjs-logger-facade.git",
     "handlebars": "^3.0.3",
     "hapi": "^10.0.0",
+    "hapi-auth-jwt2": "^5.0.7",
     "hoek": "^2.16.2",
     "inert": "^3.0.1",
+    "jsonwebtoken": "^5.0.5",
     "lodash": "^3.10.1",
     "mongoose": "^4.1.7",
     "nconf": "^0.7.2",
